# camshow-deepfaker

./: IMPLEMENTATION_PLAN.md  LICENSE  NEXT_STEPS_IMPLEMENTATION_PLAN.md  README.md  RUST_MIGRATION_PLAN.md  app.py  install.sh  pyproject.toml  requirements.txt  run-cuda.sh  run-directml.sh  run_api.sh
modules/: core.py  globals.py  metadata.py  ui.py  ui_linux.py  video_capture_linux.py
modules/processors/frame/: face_enhancer.py  face_swapper.py
rust/: Cargo.toml  README.md  build.rs  pyproject.toml
rust/examples/: face_swap_example.py  onnx_model_example.py  platform_example.py  test_onnx_integration.py
rust/python/camshow_deepfaker_rs/: __init__.py  __main__.py  py.typed
rust/src/: lib.rs
rust/src/face_processing/: face_analyser.rs  face_enhancer.rs  face_swapper.rs  mod.rs  model_downloader.rs  onnx_runtime.rs
rust/src/platform/: mod.rs
rust/src/ui/: app.rs  mod.rs  styles.css
rust/src/video_capture/: mod.rs  video_capturer.rs
